--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,57 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>{% block title %}PieceFinder{% endblock %}</title>
+        <link rel="icon" href="{{asset("image/logoPF.png")}}">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href={{asset("css/style.css")}}>
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    <div class="extWrapper">
+        <div class="intWrapper">
+            <header>
+                <div class="logo noun">
+                    <a href="/" class="PFlogo">
+                        <img src="{{asset("image/logoPF.png")}}" alt="logo">
+                    </a>
+                    <a href="/">PieceFinder</a> 
+                </div>
+                <div class="headerMenu">
+                    <nav class="headerMenu">
+                        <a href="/">Accueil</a>
+                        <a href="/search">Rechercher</a>
+                        {% if app.user %}
+                            <a href="/user/details/{{app.user.id}}">Mon Profil</a>
+                            <a href="/logout">Déconnexion</a>
+                        {% else %}
+                            <a href="/register">S'inscrire</a>
+                            <a href="/login">Connexion</a>
+                        {% endif %}
+                    </nav>
+                </div>
+            </header>
+            <body>
+                <div class="bodyWrapper">
+                    {% block body %}
+
+                    {% endblock %}
+                </div>
+                {% block javascripts %}
+                    {{ encore_entry_script_tags('app') }}
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+                {% endblock %}
+            </body>
+            <footer>
+                <div>
+                    <p>&copy; 2022 PieceFinder V0.1</p>
+                </div>
+                <div class="infoSite">
+                    <a href="/CGU">CGU</a>
+                    <a href="/contact">Contact</a>
+                </div>
+            </footer>
+        </div>
+    </div>
 </html>
