--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,6 +30,11 @@
 <i class="fa fa-dice-six"></i>
 <i class="fa fa-puzzle-piece"></i>
 <i class="fa fa-chess-rook"></i>
+<i class="fa-solid fa-address-card"></i>
+<i class="fa-solid fa-right-to-bracket"></i>
+<i class="fa-solid fa-right-from-bracket"></i>
+<i class="fa-solid fa-magnifying-glass"></i>
+<i class="fa-solid fa-house"></i>
 
 </div>
 
