--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,14 +21,14 @@
                 </div>
                 <div class="headerMenu">
                     <nav class="headerMenu">
-                        <a href="/">Accueil</a>
-                        <a href="/search">Rechercher</a>
+                        <a href="/"><span class="desktop">Accueil</span><i class="fa-solid fa-house mobile"></i></a>
+                        <a href="/search"><span class="desktop">Rechercher</span><i class="mobile fa-solid fa-magnifying-glass"></i></a>
                         {% if app.user %}
-                            <a href="/user/details/{{app.user.id}}">Mon Profil</a>
-                            <a href="/logout">Déconnexion</a>
+                            <a href="/user/details/{{app.user.id}}"><span class="desktop">Mon Profil</span><i class="mobile fa-solid fa-id-card-clip"></i></a>
+                            <a href="/logout"><span class="desktop">Déconnexion</span><i class="mobile fa-solid fa-right-from-bracket"></i></a>
                         {% else %}
-                            <a href="/register">S'inscrire</a>
-                            <a href="/login">Connexion</a>
+                            <a href="/register"><span class="desktop">S'inscrire</span><i class="mobile fa-solid fa-address-card"></i></a>
+                            <a href="/login"><span class="desktop">Connexion</span><i class="mobile fa-solid fa-right-to-bracket"></i></a>
                         {% endif %}
                     </nav>
                 </div>
